--- a/PC1_Quimica_general.ipynb
+++ b/PC1_Quimica_general.ipynb
@@ -11,7 +11,7 @@
         "l-ROkSx-3Ktu",
         "IeF7TWL4LhMh"
       ],
-      "authorship_tag": "ABX9TyOiZmHHd6WQsCrPUF8cyWjO",
+      "authorship_tag": "ABX9TyNpQ0fgj/nHodPyjsmS8wtN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "Fx5nXY6BwW1s",
         "colab": {
@@ -198,7 +198,7 @@
         },
         "outputId": "6d4621c3-e0fd-419b-9b7e-029aef9aabd1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         },
         "outputId": "a0b11b51-e988-4cea-c36a-caaee4e50c5f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
         },
         "outputId": "53f1949d-0c6e-4913-b317-b7629a17a42e"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
         },
         "outputId": "44d160eb-31fb-4d12-8b9f-a61c8d7af675"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         "id": "hZKTKS5l3Q-f",
         "outputId": "bcda1e79-d2eb-4155-85d0-b8e490994cd7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -458,59 +458,74 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Librería necesaria"
+      ],
+      "metadata": {
+        "id": "0A2D0Ez0DTg2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "masa_H = 1.008\n",
-        "masa_C = 12.011\n",
-        "masa_O = 15.999\n",
+        "pip install chempy"
+      ],
+      "metadata": {
+        "id": "7HEct_EGDZDO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from chempy import balance_stoichiometry\n",
+        "from chempy import Substance\n",
         "\n",
-        "reactante1 = \"C6H12O6\"\n",
-        "reactante2 = \"O2\"\n",
-        "producto1 = \"CO2\"\n",
-        "producto2 = \"OH2\"\n",
+        "C6H12O6 = Substance.from_formula('C6H12O6')\n",
+        "O2 = Substance.from_formula('O2')\n",
+        "CO2 = Substance.from_formula('CO2')\n",
+        "OH2 = Substance.from_formula('OH2')\n",
         "\n",
-        "print(\"Reaccion original:\")\n",
-        "print(f\"{reactante1} + {reactante2} -> {producto1} + {producto2}\")\n",
+        "print(\"Ecuacion original:\")\n",
+        "print(\"C6H12O6 + O2 -> CO2 + OH2\")\n",
+        "\n",
+        "reactantes, productos = balance_stoichiometry({'C6H12O6','O2'},{'CO2','OH2'})\n",
         "\n",
         "print()\n",
-        "print(\"Reaccion balanceada:\")\n",
-        "print(f\"{reactante1} + 6 {reactante2} -> 6 {producto1} + 6 {producto2}\")\n",
-        "\n",
-        "masa_reactante1 = 6*masa_C + 12*masa_H + 6*masa_O\n",
-        "masa_reactante2 = 6*(2*masa_O)\n",
-        "masa_producto1 = 6*(masa_C + 2*masa_O)\n",
-        "masa_producto2 = 6*(masa_O + 2*masa_H)\n",
+        "print(\"Ecuacion balanceada:\")\n",
+        "print(f\"{reactantes['C6H12O6']} C6H12O6 + {reactantes['O2']} O2 -> {productos['CO2']} CO2 + {productos['OH2']} OH2\")\n",
         "\n",
         "print()\n",
         "print(\"Suma de masas de reactantes y productos:\")\n",
-        "if masa_reactante1 + masa_reactante2 == masa_producto1 + masa_producto2:\n",
-        "    print(f\"{masa_reactante1} + {masa_reactante2} = {masa_producto1} + {masa_producto2}\")\n",
-        "    print(f\"{masa_reactante1 + masa_reactante2} = {masa_producto1 + masa_producto2}\")\n",
-        "    print(\"Conservacion de la masa demostrada.\")"
+        "print(f\"{1*C6H12O6.molar_mass()} + {6*O2.molar_mass()} = {6*CO2.molar_mass()} + {6*OH2.molar_mass()}\")\n",
+        "print(f\"{1*C6H12O6.molar_mass() + 6*O2.molar_mass()} = {6*CO2.molar_mass() + 6*OH2.molar_mass()}\")\n",
+        "print(\"Conservacion de la masa demostrada\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xtMt0vGG3S7W",
-        "outputId": "743c6439-124e-4630-8447-13e3d958892a"
+        "outputId": "e3938a6d-c395-42ff-d3c5-19e2d89a8fa8"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Reaccion original:\n",
+            "Ecuacion original:\n",
             "C6H12O6 + O2 -> CO2 + OH2\n",
             "\n",
-            "Reaccion balanceada:\n",
-            "C6H12O6 + 6 O2 -> 6 CO2 + 6 OH2\n",
+            "Ecuacion balanceada:\n",
+            "1 C6H12O6 + 6 O2 -> 6 CO2 + 6 OH2\n",
             "\n",
             "Suma de masas de reactantes y productos:\n",
-            "180.156 + 191.988 = 264.054 + 108.09\n",
-            "372.144 = 372.144\n",
-            "Conservacion de la masa demostrada.\n"
+            "180.156 g/mol + 191.988 g/mol = 264.054 g/mol + 108.09 g/mol\n",
+            "372.144 g/mol = 372.144 g/mol\n",
+            "Conservacion de la masa demostrada\n"
           ]
         }
       ]
@@ -577,7 +592,7 @@
         },
         "outputId": "7dbb95f1-0f96-4a08-ac2e-d8e258266416"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
